--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dino-dev/cli",
-  "version": "1.0.0",
+  "version": "1.2.1",
   "description": "dino dev cloud cli",
   "license": "Apache-2.0",
   "author": {
@@ -24,22 +24,21 @@
     "access": "public"
   },
   "dependencies": {
-    "chalk": "^5.0.0",
     "child_process": "^1.0.2",
     "commander": "^9.0.0",
     "dayjs": "^1.10.7",
     "execa": "^6.0.0",
-    "inquirer": "^8.2.0",
     "lodash-es": "^4.17.21",
     "minimist": "^1.2.5",
     "open": "^8.4.0",
-    "template7": "^1.4.2"
+    "picocolors": "^1.0.0",
+    "template7": "^1.4.2",
+    "yesno": "^0.3.1"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^21.0.1",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.1.3",
-    "@types/inquirer": "^8.2.0",
     "@types/lodash-es": "^4.17.6",
     "@types/node": "^17.0.16",
     "@typescript-eslint/eslint-plugin": "^5.11.0",
@@ -55,10 +54,10 @@
     "typescript": "^4.5.5"
   },
   "keywords": [
-    "dino cloud",
+    "dino-dev-cli",
+    "dino-dev-cloud",
     "dino-spring",
-    "dino-vue",
-    "agent"
+    "dino-vue"
   ],
   "engines": {
     "node": "^12.0.0 || >= 14.0.0"
