--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dino-dev/cli",
-  "version": "1.2.14",
+  "version": "1.2.18",
   "description": "dino dev cloud cli",
   "license": "Apache-2.0",
   "author": {
@@ -18,7 +18,7 @@
     "clean": "rimraf lib bin",
     "build": "yarn run clean && yarn run bundle",
     "bundle": "rollup -c && tsc",
-    "pub": "yarn build && yarn --patch publish"
+    "pub": "yarn build && yarn --registry https://registry.npmjs.org/ --patch publish"
   },
   "publishConfig": {
     "access": "public"
@@ -36,6 +36,7 @@
     "picocolors": "^1.0.0",
     "semver": "^7.3.7",
     "simple-git": "^3.2.4",
+    "tar": "^6.1.11",
     "template7": "^1.4.2",
     "yesno": "^0.3.1"
   },
@@ -64,6 +65,6 @@
     "dino-vue"
   ],
   "engines": {
-    "node": "^12.0.0 || >= 14.0.0"
+    "node": " >= 14.0.0"
   }
 }
