--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "commander-completion": "^1.0.1",
     "dayjs": "^1.10.7",
     "execa": "^6.0.0",
+    "inquirer": "^9.2.0",
     "lodash-es": "^4.17.21",
     "minimist": "^1.2.5",
     "open": "^8.4.0",
@@ -44,6 +45,7 @@
     "@rollup/plugin-commonjs": "^21.0.1",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.1.3",
+    "@types/inquirer": "^9.0.3",
     "@types/lodash-es": "^4.17.6",
     "@types/node": "^17.0.16",
     "@typescript-eslint/eslint-plugin": "^5.11.0",
